--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ node_modules/
 /client/env.development.local
 /client/env.test.local
 /client/env.production.local
+/config/default.json
+/config/production.json
 
 npm-debug.log*
 yarn-debug.log*
